  package it will create an archives of it.

* Added ability to pass local file and directory paths to --find-links, e.g.
  --find-links=file:///path/to/my/private/archive

* Reduced the amount of console log messages when fetching a page to find a
  distribution was problematic. The full messages can be found in pip-log.txt.

0.4
---

* Make ``-e`` work better with local hg repositories

* Construct PyPI URLs the exact way easy_install constructs URLs (you
  might notice this if you use a custom index that is
  slash-sensitive).

* Improvements on Windows (from `Ionel Maries Cristian
  <http://ionelmc.wordpress.com/>`_).

* Fixed problem with not being able to install private git repositories.

* Make ``pip zip`` zip all its arguments, not just the first.

* Fix some filename issues on Windows.

* Allow the ``-i`` and ``--extra-index-url`` options in requirements
  files.

* Fix the way bundle components are unpacked and moved around, to make
  bundles work.

* Adds ``-s`` option to allow the access to the global site-packages if a
  virtualenv is to be created.

* Fixed support for Subversion 1.6.

0.3.1
-----

* Improved virtualenv restart and various path/cleanup problems on win32.

* Fixed a regression with installing from svn repositories (when not
  using ``-e``).

* Fixes when installing editable packages that put their source in a
  subdirectory (like ``src/``).

* Improve ``pip -h``

0.3
---

* Added support for editable packages created from Git, Mercurial and Bazaar
  repositories and ability to freeze them. Refactored support for version
  control systems.

* Do not use ``sys.exit()`` from inside the code, instead use a
  return.  This will make it easier to invoke programmatically.

* Put the install record in ``Package.egg-info/installed-files.txt``
  (previously they went in
  ``site-packages/install-record-Package.txt``).

* Fix a problem with ``pip freeze`` not including ``-e svn+`` when an
  svn structure is peculiar.
